--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "prettier": "^3.2.2"
   },
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "git": "^0.1.5",
-    "mongoose": "^8.1.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.0",
+    "node-pre-gyp": "^0.17.0"
   }
 }
