--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -22,6 +23,7 @@
     "git": "^0.1.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "node-pre-gyp": "^0.17.0"
   }
 }
